--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <main></main>
+    <script src="lib/globals.js"></script>
+    <script src="lib/helpers.js"></script>
+    <script src="lib/pan_and_zoom.js"></script>
+    <script src="components/building.js"></script>
+    <script src="generators/roadGenerator.js"></script>
+    <script src="generators/buildingGenerator.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
