Brought in name generators

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <script src="components/building.js"></script>
     <script src="generators/roadGenerator.js"></script>
     <script src="generators/buildingGenerator.js"></script>
+    <script src="generators/names/districtNames.js"></script>
+    <script src="generators/names/dwarfNames.js"></script>
+    <script src="generators/names/elfNames.js"></script>
+    <script src="generators/names/humanNames.js"></script>
+    <script src="generators/names/jobs.js"></script>
+    <script src="generators/names/townNames.js"></script>
+    <script src="generators/names/typeLists.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
