--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="lib/globals.js"></script>
     <script src="lib/helpers.js"></script>
     <script src="lib/pan_and_zoom.js"></script>
+    <script src="lib/save_and_load.js"></script>
     <script src="components/building.js"></script>
     <script src="generators/roadGenerator.js"></script>
     <script src="generators/buildingGenerator.js"></script>
