Used CuteAlert library to add confirm to new city

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" href="lib/cute-alert-master/style.css" />
     <meta charset="utf-8" />
   </head>
   <body>
     <main></main>
+    <script src="lib/cute-alert-master/cute-alert.js"></script>
     <script src="lib/globals.js"></script>
     <script src="lib/helpers.js"></script>
     <script src="lib/pan_and_zoom.js"></script>
