Overlay for <1000px screens

--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" href="lib/cute-alert-master/style.css" />
     <meta charset="utf-8" />
+    <meta name="viewport" />
   </head>
   <body>
+    <div class="mobile_overlay">
+      <p>
+        Unfortunately, this site only works on desktop devices. We are working
+        hard to make it more mobile friendly.
+      </p>
+      <p>In the meantime, please re-visit the site on desktop.</p>
+    </div>
     <main></main>
     <script src="lib/cute-alert-master/cute-alert.js"></script>
     <script src="lib/globals.js"></script>
