Rendering of panes and moving them around the screen

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
     <script src="lib/cute-alert-master/cute-alert.js"></script>
     <script src="lib/globals.js"></script>
     <script src="lib/helpers.js"></script>
-    <script src="lib/pan_and_zoom.js"></script>
+    <script src="lib/mouse_interaction.js"></script>
     <script src="lib/save_and_load.js"></script>
     <script src="components/building.js"></script>
+    <script src="components/pane.js"></script>
     <script src="generators/roadGenerator.js"></script>
     <script src="generators/buildingGenerator.js"></script>
     <script src="generators/names/districtNames.js"></script>
