Moved opening of panes to own file

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script src="lib/save_and_load.js"></script>
     <script src="components/building.js"></script>
     <script src="components/pane.js"></script>
+    <script src="components/detailPanes.js"></script>
     <script src="generators/roadGenerator.js"></script>
     <script src="generators/buildingGenerator.js"></script>
     <script src="generators/names/districtNames.js"></script>
