--- a/index.html
+++ b/index.html
@@ -23,23 +23,6 @@
       <p>In the meantime, please re-visit the site on desktop.</p>
     </div>
     <main></main>
-    <script src="lib/cute-alert-master/cute-alert.js"></script>
-    <script src="lib/globals.js"></script>
-    <script src="lib/helpers.js"></script>
-    <script src="lib/mouse_interaction.js"></script>
-    <script src="lib/save_and_load.js"></script>
-    <script src="components/building.js"></script>
-    <script src="components/pane.js"></script>
-    <script src="components/detailPanes.js"></script>
-    <script src="generators/roadGenerator.js"></script>
-    <script src="generators/buildingGenerator.js"></script>
-    <script src="generators/names/districtNames.js"></script>
-    <script src="generators/names/dwarfNames.js"></script>
-    <script src="generators/names/elfNames.js"></script>
-    <script src="generators/names/humanNames.js"></script>
-    <script src="generators/names/jobs.js"></script>
-    <script src="generators/names/townNames.js"></script>
-    <script src="generators/names/typeLists.js"></script>
-    <script src="sketch.js"></script>
+    <script src="jsm/main.js"></script>
   </body>
 </html>
