Copying all files into dist

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/addons/p5.sound.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -10,9 +12,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="stylesheet" href="lib/cute-alert-master/style.css" />
-    <meta charset="utf-8" />
-    <meta name="viewport" />
   </head>
   <body>
     <div class="mobile_overlay">
@@ -23,6 +22,6 @@
       <p>In the meantime, please re-visit the site on desktop.</p>
     </div>
     <main></main>
-    <script src="jsm/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
