--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
       <p>In the meantime, please re-visit the site on desktop.</p>
     </div>
     <main></main>
-    <script src="main.js"></script>
+    <script src="main.min.js"></script>
   </body>
 </html>
